# primemark

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  bruteforce.py  pyproject.toml  sieve_eratosthenes.py  sieves.py  test_and_benchmark.py  test_and_compare.py  visualize.py
