[tool.poetry]
name = "primemark"
version = "0.1.0"
description = ""
authors = ["Ludwig Schubert <git@ludwigschubert.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"
pytest-benchmark = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
